# payslip-renamer

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: homebrew.yml
src/: date.rs  main.rs  parser.rs
