[package]
name = "payslip-renamer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
pdf_oxide = "0.3.17"
regex = "1.12.3"

[dev-dependencies]
rstest = { version = "0.26.1", default-features = false, features = ["crate-name"] }
