[package]
name = "payslip-renamer"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
pdf_oxide = "0.3.40"
regex = "1.12.3"
signal-hook = "0.4.3"
crossbeam-channel = "0.5.15"
notify = { version = "8.2.0", features = ["crossbeam-channel"] }
notify-debouncer-full = { version = "0.7.0", features = ["crossbeam-channel"] }
log = "0.4.29"
oslog = "0.2.0"
fern = "0.7.1"

[dev-dependencies]
rstest = { version = "0.26.1", default-features = false, features = ["crate-name"] }

# Usage: cargo run --profile=release-with-debug
[profile.release-with-debug]
inherits = "release"
debug = true